index.html update for hard mode

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
             <button id="reset">new colors</button>
             <span id="header__message"></span>
             <button class="mode">easy</button>
-            <button class="selected mode">hard</button>
+            <button class="selected mode">extra hard</button>
         </div>
     </header>
     <div id="content">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
