--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="header__info-board">
-            <h3>the great <br><span id="message"></span><br> guessing game</h3>
+            <h3>the great <br><span id="message"></span><br>guess the color game</h3>
         </div>
         <div id="header__game-options">
             <button id="reset">new colors</button>
